(fix) Alignment of no input text error modal.

--- a/client/src/styles/errorModal.scss
+++ b/client/src/styles/errorModal.scss
@@ -19,7 +19,7 @@
     padding: 2px 1vh 2px 1vh;
     font-size: 1vh;
     font-weight: bold;
-    transform: scale(2);
+    transform: scale(2.5);
 }
 
 @media only screen and (min-width: 850) {
@@ -61,7 +61,7 @@
     }
 }
 
-@media only screen and (min-width: 750px) and (max-height: 1300px) {
+@media only screen and (min-width: 1000px) and (max-height: 1200px) {
     #error-text-container {
       // @include cipher-style();
       // position: fixed;
